// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteWarning when CATI mode is present should display an error when the CATI active check fails 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="panel panel--error panel--no-title  u-mt-m"
      >
        <div
          class="panel__body "
        >
          Could not get warning details, please try again
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="panel panel--error panel--no-title  u-mt-m"
    >
      <div
        class="panel__body "
      >
        Could not get warning details, please try again
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeleteWarning when CATI mode is present should display the CATI warning for an active CATI questionnaire 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h1
        class="u-mb-l"
      >
        Are you sure you want to delete the questionnaire 
        <em
          class="highlight"
        >
          LMS2201_AA1
        </em>
        ?
      </h1>
      <div
        class="panel panel--error panel--no-title  u-mt-m"
      >
        <div
          class="panel__body "
        >
          Questionnaire has active Telephone Operations survey days
        </div>
      </div>
      <div
        class="panel panel--warn panel--no-title  u-mt-m"
      >
        <span
          aria-hidden="true"
          class="panel__icon"
        >
          !
        </span>
        <span
          class="u-vh"
        >
          Warning: 
        </span>
        <div
          class="panel__body "
        >
          The questionnaire and all associated respondent data will be deleted
        </div>
      </div>
      <form>
        <br />
        <button
          class="btn "
          data-testid="confirm-delete-button"
          id="confirm-delete"
          type="button"
        >
          <span
            class="btn__inner"
          >
            Delete
          </span>
        </button>
        <button
          class="btn btn--secondary "
          data-testid="cancel-delete-button"
          id="cancel-delete"
          type="button"
        >
          <span
            class="btn__inner"
          >
            Cancel
          </span>
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <h1
      class="u-mb-l"
    >
      Are you sure you want to delete the questionnaire 
      <em
        class="highlight"
      >
        LMS2201_AA1
      </em>
      ?
    </h1>
    <div
      class="panel panel--error panel--no-title  u-mt-m"
    >
      <div
        class="panel__body "
      >
        Questionnaire has active Telephone Operations survey days
      </div>
    </div>
    <div
      class="panel panel--warn panel--no-title  u-mt-m"
    >
      <span
        aria-hidden="true"
        class="panel__icon"
      >
        !
      </span>
      <span
        class="u-vh"
      >
        Warning: 
      </span>
      <div
        class="panel__body "
      >
        The questionnaire and all associated respondent data will be deleted
      </div>
    </div>
    <form>
      <br />
      <button
        class="btn "
        data-testid="confirm-delete-button"
        id="confirm-delete"
        type="button"
      >
        <span
          class="btn__inner"
        >
          Delete
        </span>
      </button>
      <button
        class="btn btn--secondary "
        data-testid="cancel-delete-button"
        id="cancel-delete"
        type="button"
      >
        <span
          class="btn__inner"
        >
          Cancel
        </span>
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeleteWarning when CATI mode is present should display the loading page while waiting for the CATI status 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="panel panel--info panel--no-title  u-mt-m"
      >
        <div
          class="panel__body "
        >
          <div
            style="text-align: center;"
          >
            <div
              aria-busy="true"
              class=""
            >
              <svg
                aria-label="audio-loading"
                height="30"
                viewBox="0 0 38 38"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs>
                  <lineargradient
                    id="a"
                    x1="8.042%"
                    x2="65.682%"
                    y1="0%"
                    y2="23.865%"
                  >
                    <stop
                      offset="0%"
                      stop-color="#064868"
                      stop-opacity="0"
                    />
                    <stop
                      offset="63.146%"
                      stop-color="#064868"
                      stop-opacity=".631"
                    />
                    <stop
                      offset="100%"
                      stop-color="#064868"
                    />
                  </lineargradient>
                </defs>
                <g
                  fill="none"
                  fill-rule="evenodd"
                >
                  <g
                    transform="translate(1 1)"
                  >
                    <path
                      d="M36 18c0-9.94-8.06-18-18-18"
                      id="Oval-2"
                      stroke="#064868"
                      stroke-width="2"
                    >
                      <animatetransform
                        attributeName="transform"
                        dur="0.9s"
                        from="0 18 18"
                        repeatCount="indefinite"
                        to="360 18 18"
                        type="rotate"
                      />
                    </path>
                    <circle
                      cx="36"
                      cy="18"
                      fill="#fff"
                      r="1"
                    >
                      <animatetransform
                        attributeName="transform"
                        dur="0.9s"
                        from="0 18 18"
                        repeatCount="indefinite"
                        to="360 18 18"
                        type="rotate"
                      />
                    </circle>
                  </g>
                </g>
              </svg>
            </div>
            Loading
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="panel panel--info panel--no-title  u-mt-m"
    >
      <div
        class="panel__body "
      >
        <div
          style="text-align: center;"
        >
          <div
            aria-busy="true"
            class=""
          >
            <svg
              aria-label="audio-loading"
              height="30"
              viewBox="0 0 38 38"
              width="30"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <lineargradient
                  id="a"
                  x1="8.042%"
                  x2="65.682%"
                  y1="0%"
                  y2="23.865%"
                >
                  <stop
                    offset="0%"
                    stop-color="#064868"
                    stop-opacity="0"
                  />
                  <stop
                    offset="63.146%"
                    stop-color="#064868"
                    stop-opacity=".631"
                  />
                  <stop
                    offset="100%"
                    stop-color="#064868"
                  />
                </lineargradient>
              </defs>
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <g
                  transform="translate(1 1)"
                >
                  <path
                    d="M36 18c0-9.94-8.06-18-18-18"
                    id="Oval-2"
                    stroke="#064868"
                    stroke-width="2"
                  >
                    <animatetransform
                      attributeName="transform"
                      dur="0.9s"
                      from="0 18 18"
                      repeatCount="indefinite"
                      to="360 18 18"
                      type="rotate"
                    />
                  </path>
                  <circle
                    cx="36"
                    cy="18"
                    fill="#fff"
                    r="1"
                  >
                    <animatetransform
                      attributeName="transform"
                      dur="0.9s"
                      from="0 18 18"
                      repeatCount="indefinite"
                      to="360 18 18"
                      type="rotate"
                    />
                  </circle>
                </g>
              </g>
            </svg>
          </div>
          Loading
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeleteWarning when CAWI mode is include should display CAWI warning for an active CAWI questionnaire 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h1
        class="u-mb-l"
      >
        Are you sure you want to delete the questionnaire 
        <em
          class="highlight"
        />
        ?
      </h1>
      <div
        class="panel panel--error panel--no-title  u-mt-m"
      >
        <div
          class="panel__body "
        >
          Questionnaire is active for web collection
        </div>
      </div>
      <div
        class="panel panel--warn panel--no-title  u-mt-m"
      >
        <span
          aria-hidden="true"
          class="panel__icon"
        >
          !
        </span>
        <span
          class="u-vh"
        >
          Warning: 
        </span>
        <div
          class="panel__body "
        >
          The questionnaire and all associated respondent data will be deleted
        </div>
      </div>
      <form>
        <br />
        <button
          class="btn "
          data-testid="confirm-delete-button"
          id="confirm-delete"
          type="button"
        >
          <span
            class="btn__inner"
          >
            Delete
          </span>
        </button>
        <button
          class="btn btn--secondary "
          data-testid="cancel-delete-button"
          id="cancel-delete"
          type="button"
        >
          <span
            class="btn__inner"
          >
            Cancel
          </span>
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <h1
      class="u-mb-l"
    >
      Are you sure you want to delete the questionnaire 
      <em
        class="highlight"
      />
      ?
    </h1>
    <div
      class="panel panel--error panel--no-title  u-mt-m"
    >
      <div
        class="panel__body "
      >
        Questionnaire is active for web collection
      </div>
    </div>
    <div
      class="panel panel--warn panel--no-title  u-mt-m"
    >
      <span
        aria-hidden="true"
        class="panel__icon"
      >
        !
      </span>
      <span
        class="u-vh"
      >
        Warning: 
      </span>
      <div
        class="panel__body "
      >
        The questionnaire and all associated respondent data will be deleted
      </div>
    </div>
    <form>
      <br />
      <button
        class="btn "
        data-testid="confirm-delete-button"
        id="confirm-delete"
        type="button"
      >
        <span
          class="btn__inner"
        >
          Delete
        </span>
      </button>
      <button
        class="btn btn--secondary "
        data-testid="cancel-delete-button"
        id="cancel-delete"
        type="button"
      >
        <span
          class="btn__inner"
        >
          Cancel
        </span>
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeleteWarning when Delete button is pressed should display an error if deleting TO start date fails 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h1
        class="u-mb-l"
      >
        Are you sure you want to delete the questionnaire 
        <em
          class="highlight"
        >
          LMS2210_CC1
        </em>
        ?
      </h1>
      <div
        class="panel panel--warn panel--no-title  u-mt-m"
      >
        <span
          aria-hidden="true"
          class="panel__icon"
        >
          !
        </span>
        <span
          class="u-vh"
        >
          Warning: 
        </span>
        <div
          class="panel__body "
        >
          The questionnaire and all associated respondent data will be deleted
        </div>
      </div>
      <div
        class="panel panel--error panel--no-title  u-mt-m"
      >
        <div
          class="panel__body "
        >
          Failed to delete TO start date
        </div>
      </div>
      <form>
        <br />
        <button
          class="btn "
          data-testid="confirm-delete-button"
          id="confirm-delete"
          type="button"
        >
          <span
            class="btn__inner"
          >
            Delete
          </span>
        </button>
        <button
          class="btn btn--secondary "
          data-testid="cancel-delete-button"
          id="cancel-delete"
          type="button"
        >
          <span
            class="btn__inner"
          >
            Cancel
          </span>
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <h1
      class="u-mb-l"
    >
      Are you sure you want to delete the questionnaire 
      <em
        class="highlight"
      >
        LMS2210_CC1
      </em>
      ?
    </h1>
    <div
      class="panel panel--warn panel--no-title  u-mt-m"
    >
      <span
        aria-hidden="true"
        class="panel__icon"
      >
        !
      </span>
      <span
        class="u-vh"
      >
        Warning: 
      </span>
      <div
        class="panel__body "
      >
        The questionnaire and all associated respondent data will be deleted
      </div>
    </div>
    <div
      class="panel panel--error panel--no-title  u-mt-m"
    >
      <div
        class="panel__body "
      >
        Failed to delete TO start date
      </div>
    </div>
    <form>
      <br />
      <button
        class="btn "
        data-testid="confirm-delete-button"
        id="confirm-delete"
        type="button"
      >
        <span
          class="btn__inner"
        >
          Delete
        </span>
      </button>
      <button
        class="btn btn--secondary "
        data-testid="cancel-delete-button"
        id="cancel-delete"
        type="button"
      >
        <span
          class="btn__inner"
        >
          Cancel
        </span>
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
